@@ -9,6 +9,7 @@
 Release 0.67 'Constance' ??? ??, 2004
 ------------------------------------
 
+2004-09-27 VZ: allow to select "open as mail message" in "Open with" dialog
 2004-09-23 VZ: improved UTF-[78] support: try to guess correct encoding
 2004-09-18 VZ: implemented support for Python functions in message templates
 2004-09-13 VZ: added "Folder|Where is filter..." command
